--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack-merge": "^4.2.2"
   }
 }
