--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.1.3",
     "webpack-merge": "^4.2.2"
   }
 }
